Fix style on firefox

--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,7 @@
 html, body
   width: 100%
   margin: 0px
+  background-color: #111111
 
 #fahrplan
   width: 100%
@@ -72,6 +73,7 @@ html, body
 
           a
             color: inherit
+            font-family: inherit
             text-decoration: none
 
         .speaker
